Formulario de solicitud de empleo, estructura del archivo más navbar

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,7 @@
 .App {
   text-align: center;
+  padding: 2rem;
+  /* background-color: #ee9e54; */
 }
 
 .App-logo {
@@ -7,32 +9,46 @@
   pointer-events: none;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+/*Navbar*/
+.navbar {
+  background-color: #ee9e54;
+  /* border-style: dashed; */
+}
+/*Formulario*/
+#postulacion {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 1rem ;
+  border: 1px solid #c4acacfa;
+  border-radius: 5px;
+  background-color: #ee9e54;
+}
+/*Estilo para las etiquetas y campos de entrada*/
+label {
+  display: block;
+  margin-bottom: 1rem;
+  font-weight: bold;
+}
+/*Estilo de los inputs*/
+input[type="text"], input[type="email"], input[type="date"], select {
+  width: 60%;
+  padding: 0.5em;
+  margin-bottom: 1rem;
+  border: 1px solid #ccc;
+  border-radius: 14px;
+}
+/*Estilo botón enviar*/
+button[type="submit"] {
+  background-color: #06cc27;
+  border: none;
+  border-radius: 14px;
+  padding: 10px 20px;
+  cursor: pointer;
+  font-size: 16px;
+  font-weight: bold;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+button[type="submit"]:hover {
+  background-color: #0624cc;
+  color: whitesmoke;
 }
